--- a/envs/requirements.txt
+++ b/envs/requirements.txt
@@ -1,176 +1,8 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=1_llvm
-attrs=19.3.0=py_0
-backcall=0.1.0=py_0
-bleach=3.1.5=pyh9f0ad1d_0
-bzip2=1.0.8=h516909a_2
-ca-certificates=2020.4.5.2=hecda079_0
-cairo=1.16.0=hcf35c78_1003
-certifi=2020.4.5.2=py36h9f0ad1d_0
-chardet=3.0.4=pypi_0
-cudatoolkit=10.1.243=h6bb024c_0
-cycler=0.10.0=py_2
-cython=0.29.19=py36h831f99a_0
-dbus=1.13.6=he372182_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-entrypoints=0.3=py36h9f0ad1d_1001
-expat=2.2.9=he1b5a44_2
-ffmpeg=4.1.3=h167e202_0
-fontconfig=2.13.1=h86ecdb6_1001
-freetype=2.10.2=he06d7ca_0
-gettext=0.19.8.1=hc5be6a0_1002
-giflib=5.2.1=h516909a_2
-glib=2.64.3=h6f030ca_0
-gmp=6.2.0=he1b5a44_2
-gnutls=3.6.13=h79a8f9a_0
-graphite2=1.3.13=he1b5a44_1001
-gst-plugins-base=1.14.5=h0935bb2_2
-gstreamer=1.14.5=h36ae1b5_2
-harfbuzz=2.4.0=h9f30f68_3
-hdf5=1.10.5=nompi_h3c11f04_1104
-icu=64.2=he1b5a44_1
-idna=2.9=pypi_0
-importlib-metadata=1.6.0=py36h9f0ad1d_0
-importlib_metadata=1.6.0=0
-intel-openmp=2019.5=281
-ipykernel=5.3.0=py36h95af2a2_0
-ipython=7.15.0=py36h9f0ad1d_0
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.5.1=py_0
-jasper=1.900.1=h07fcdf6_1006
-jedi=0.17.0=py36h9f0ad1d_0
-jinja2=2.11.2=pyh9f0ad1d_0
-jpeg=9c=h14c3975_1001
-jsonschema=3.2.0=py36h9f0ad1d_1
-jupyter=1.0.0=py_2
-jupyter_client=6.1.3=py_0
-jupyter_console=6.1.0=py_1
-jupyter_contrib_core=0.3.3=py_2
-jupyter_contrib_nbextensions=0.5.1=py36_0
-jupyter_core=4.6.3=py36h9f0ad1d_1
-jupyter_highlight_selected_word=0.2.0=py36_1000
-jupyter_latex_envs=1.4.6=py36_1000
-jupyter_nbextensions_configurator=0.4.1=py36_0
-kiwisolver=1.2.0=py36hdb11119_0
-krb5=1.17.1=h2fd8d38_0
-lame=3.100=h14c3975_1001
-libblas=3.8.0=16_openblas
-libcblas=3.8.0=16_openblas
-libclang=9.0.1=default_hde54327_0
-libcurl=7.69.1=hf7181ac_0
-libedit=3.1.20170329=hf8c457e_1001
-libffi=3.2.1=he1b5a44_1007
-libgcc-ng=9.2.0=h24d8f2e_2
-libgfortran-ng=7.5.0=hdf63c60_6
-libiconv=1.15=h516909a_1006
-liblapack=3.8.0=16_openblas
-liblapacke=3.8.0=16_openblas
-libllvm9=9.0.1=he513fc3_1
-libopenblas=0.3.9=h5ec1e0e_0
-libopencv=4.2.0=py36_2
-libpng=1.6.37=hed695b0_1
-libsodium=1.0.17=h516909a_0
-libssh2=1.9.0=hab1572f_2
-libstdcxx-ng=9.2.0=hdf63c60_2
-libtiff=4.1.0=hc3755c2_3
-libuuid=2.32.1=h14c3975_1000
-libwebp=1.0.2=h56121f0_5
-libxcb=1.13=h14c3975_1002
-libxkbcommon=0.10.0=he1b5a44_0
-libxml2=2.9.10=hee79883_0
-libxslt=1.1.33=h31b3aaa_0
-llvm-openmp=10.0.0=hc9558a2_0
-lxml=4.5.0=py36h17c4326_1
-lz4-c=1.9.2=he1b5a44_1
-markupsafe=1.1.1=py36h8c4c3a4_1
-matplotlib=3.2.1=0
-matplotlib-base=3.2.1=py36hb8e4980_0
-mistune=0.8.4=py36h8c4c3a4_1001
-mkl=2019.5=281
-nbconvert=5.6.1=py36h9f0ad1d_1
-nbformat=5.0.6=py_0
-ncurses=6.1=hf484d3e_1002
-nettle=3.4.1=h1bed415_1002
-ninja=1.10.0=hc9558a2_0
-notebook=6.0.3=py36h9f0ad1d_0
-nspr=4.25=he1b5a44_0
-nss=3.47=he751ad9_0
-numpy=1.18.4=py36h7314795_0
-olefile=0.46=py_0
-opencv=4.2.0=py36_2
-openh264=1.8.0=hdbcaa40_1000
-openssl=1.1.1g=h516909a_0
-packaging=20.4=pyh9f0ad1d_0
-pandoc=2.9.2.1=0
-pandocfilters=1.4.2=py_1
-parso=0.7.0=pyh9f0ad1d_0
-pcre=8.44=he1b5a44_0
-pexpect=4.8.0=py36h9f0ad1d_1
-pickleshare=0.7.5=py36h9f0ad1d_1001
-pillow=7.1.2=py36h8328e55_0
-pip=20.1.1=py_1
-pixman=0.38.0=h516909a_1003
-prometheus_client=0.8.0=pyh9f0ad1d_0
-prompt-toolkit=3.0.5=py_0
-prompt_toolkit=3.0.5=0
-pthread-stubs=0.4=h14c3975_1001
-ptyprocess=0.6.0=py_1001
-py-opencv=4.2.0=py36h5ca1d4c_2
-pycocotools=2.0.0=py36h516909a_1001
-pycurl=7.43.0.5=py36h1ba5d50_0
-pygments=2.6.1=py_0
-pyparsing=2.4.7=pyh9f0ad1d_0
-pyqt=5.12.3=py36haa643ae_3
-pyqt5-sip=4.19.18=pypi_0
-pyqtchart=5.12=pypi_0
-pyqtwebengine=5.12.1=pypi_0
-pyrsistent=0.16.0=py36h8c4c3a4_0
-python=3.6.7=h357f687_1006
-python-dateutil=2.8.1=py_0
-python_abi=3.6=1_cp36m
-pytorch=1.4.0=py3.6_cuda10.1.243_cudnn7.6.3_0
-pyyaml=5.3.1=py36h8c4c3a4_0
-pyzmq=19.0.1=py36h9947dbf_0
-qt=5.12.5=hd8c4c69_1
-qtconsole=4.7.4=pyh9f0ad1d_0
-qtpy=1.9.0=py_0
-readline=8.0=hf8c457e_0
-requests=2.23.0=pypi_0
-send2trash=1.5.0=py_0
-setuptools=47.1.1=py36h9f0ad1d_0
-six=1.15.0=pyh9f0ad1d_0
-sqlite=3.30.1=hcee41ef_0
-terminado=0.8.3=py36h9f0ad1d_1
-testpath=0.4.4=py_0
-tk=8.6.10=hed695b0_0
-torchsummary=1.5.1=pypi_0
-torchvision=0.5.0=py36_cu101
-tornado=6.0.4=py36h8c4c3a4_1
-traitlets=4.3.3=py36h9f0ad1d_1
-urllib3=1.25.8=pypi_0
-wcwidth=0.1.9=pyh9f0ad1d_0
-webencodings=0.5.1=py_1
-wheel=0.34.2=py_1
-widgetsnbextension=3.5.1=py36_0
-x264=1!152.20180806=h14c3975_0
-xorg-kbproto=1.0.7=h14c3975_1002
-xorg-libice=1.0.10=h516909a_0
-xorg-libsm=1.2.3=h84519dc_1000
-xorg-libx11=1.6.9=h516909a_0
-xorg-libxau=1.0.9=h14c3975_0
-xorg-libxdmcp=1.1.3=h516909a_0
-xorg-libxext=1.3.4=h516909a_0
-xorg-libxrender=0.9.10=h516909a_1002
-xorg-renderproto=0.11.1=h14c3975_1002
-xorg-xextproto=7.3.0=h14c3975_1002
-xorg-xproto=7.0.31=h14c3975_1007
-xz=5.2.5=h516909a_0
-yaml=0.2.4=h516909a_0
-zeromq=4.3.2=he1b5a44_2
-zipp=3.1.0=py_0
-zlib=1.2.11=h516909a_1006
-zstd=1.4.4=h6597ccf_3
+ffmpeg==1.4
+matplotlib==3.2.1
+numpy==1.18.4
+opencv-python==4.2.0.34
+pillow==7.1.2
+pycurl==7.43.0.5
+pycocotools
+scipy
