--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ weights/checkpoints/*
 weights/results/*
 !weights/results/.gitkeep
 
-dl/train/.debug
+dl/eval/.debug
 
 # Created by https://www.gitignore.io/api/linux,python,pycharm
 # Edit at https://www.gitignore.io/?templates=linux,python,pycharm
